# agentic-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
service/: __init__.py  api.py  main.py  test.ipynb
service/agents/: chat_agent.py  input_agent.py  query_agent.py  response_agent.py
service/orchestrator/: basic.py  main_graph_node.py  subgraph_nodes.py
service/states/: graph_states.py
service/tools/: embedding_generator.py  loader.py  memory.py  reranker.py  vector_store.py  web_search.py
service/ui/: utilities.py
service/utils/: config.py  logger.py
testings/: deepeval_rag.py  langsmith.ipynb  test.ipynb
